--- a/Server/Views/content/about.ejs
+++ b/Server/Views/content/about.ejs
@@ -1,22 +1,21 @@
-  <!--COMP231 Web Application Development - Mantis Developers Team
-    --Principal Developers's : 
+ <!--COMP231 Web Application Development - Book a'Smile Team
+    --Principal Developers's: 
     ---Name: Ricardo Lopez Tuiran           ---Student ID: 301167302 
     ---Name: Elias Pena Evertz              ---Student ID: 301166037
     ---Name: Silvana Gjini                  ---Student ID: 301201477
     ---Name: Bhupinder Dabb                 ---Student ID: 301187371
     
     --Support Team Members (Secondary Developers, UI/UX Designers)    
-    ---Name: Ankit Kodan                    ---Student ID: 
-    ---Name: Rishabh Dev Dogra              ---Student ID:
-    ---Name: Balkaran Singh                 ---Student ID:
-    ---Name: Mehwish Mehmood                ---Student ID:
-    ---Name: Ala’a Al-khdour                ---Student ID:    
-
+    ---Name: Ankit Kodan                    ---Student ID: 301251952 
+    ---Name: Rishabh Dev Dogra              ---Student ID: 301255606
+    ---Name: Balkaran Singh                 ---Student ID: 301169877
+    ---Name: Mehwish Mehmood                ---Student ID: 301137378
+    ---Name: Ala’a Al-khdour                ---Student ID: 301230316
     --Web App name: Book a'Smile
     --Description: The Dental Appointments Management System is a software application that will allow users to register, 
     --edit and manage their personal accounts, book appointments according to the dentist availability, keep track on appointments 
-    --and have a history of procedures with dates and specific notes.   
-  -->
+    --and have a history of procedures with dates and specific notes. 
+ -->
 
 <%- include('../partials/header.ejs'); %>
 
@@ -30,7 +29,7 @@
         <div class="col-md-4">
           <div id="tables" class="card mb-4 box-shadow">
             <img 
-              class="fadeIn aboutPageImgs"
+              class="fadeIn aboutPageRic"
               src="../Assets/images/Ricardo.jpeg"
               alt="projectManager"
             />
@@ -38,9 +37,9 @@
               <div class="fadeIn justify-content-center align-items-center">
               <p class="card-text">
                 Lopez Tuiran, Ricardo <br />
-                Student-Id: 301167302 <br />
+                Student Id: 301167302 <br />
                 Email: rlopeztu@my.centennialcollege.ca <br />
-                Role: Project Manager
+                Role: Lead Developer
               </p>
               </div>
             </div>
@@ -49,7 +48,7 @@
         <div class="col-md-4">
           <div id="tables" class="card mb-4 box-shadow">
             <img
-              class="fadeIn aboutPageImgbhup"
+              class="fadeIn aboutPageImgBhups"
               src="../Assets/images/Bhupinder.jpeg"
               alt="UI Programmer"
             />
@@ -57,7 +56,7 @@
               <div class="fadeIn justify-content-center align-items-center">
               <p class="card-text">
                 Dabb, Bhupinder <br />
-                Student-Id: 301187371 <br />
+                Student Id: 301187371 <br />
                 Email: bdabb@my.centennialcollege.ca <br />
                 Role: UI Programmer
               </p>
@@ -68,7 +67,7 @@
         <div class="col-md-4">
           <div id="tables" class="card mb-4 box-shadow">
             <img
-              class="fadeIn aboutPageImgSilvana"
+              class="fadeIn aboutPageImgSil"
               src="../Assets/images/Silvana.jpeg"
               alt="Database Programmer"
             />
@@ -76,48 +75,9 @@
               <div class="fadeIn justify-content-center align-items-center">
               <p class="card-text">
                 Gjini, Silvana <br />
-                Student-Id: 301201477 <br />
+                Student Id: 301201477 <br />
                 Email: sgjini@my.centennialcollege.ca <br />
                 Role: Database Programmer
-              </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div id="tables" class="card mb-4 box-shadow">
-            <img
-              class="fadeIn aboutPageImgs"
-              src="../Assets/images/Paul.jpeg"
-              alt="Web Designer"
-            />
-            <div class="card-body">
-              <div class="fadeIn justify-content-center align-items-center">
-              <p class="card-text">
-                Kamau, Paul <br />
-                Student-Id: 301198424 <br />
-                Email: pkamau@my.centennialcollege.ca <br />
-                Role: Web Designer
-              </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div id="tables" class="card mb-4 box-shadow">
-            <img
-              class="fadeIn aboutPageImg"
-              src="../Assets/images/Johan.jpeg"
-              alt="Security Programmer"
-            />
-            <div class="card-body">
-              <div class="fadeIn justify-content-center align-items-center">
-              <p class="card-text">
-                Lema Farinango, Johan <br />
-                Student-Id: 301216096 <br />
-                Email: jlemafar@my.centennialcollege.ca <br />
-                Role: Security Programmer
               </p>
               </div>
             </div>
@@ -134,9 +94,104 @@
               <div class="fadeIn justify-content-center align-items-center">
               <p class="card-text">
                 Pena Evertz, Elias <br />
-                Student-Id: 301166037 <br />
+                Student Id: 301166037 <br />
                 Email: epenaeve@my.centennialcollege.ca <br />
                 Role: Lead Software Engineer
+              </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div id="tables" class="card mb-4 box-shadow">
+            <img
+              class="fadeIn aboutPageImgMeh"
+              src="../Assets/images/mehwish.jpeg"
+              alt="Web Designer"
+            />
+            <div class="card-body">
+              <div class="fadeIn justify-content-center align-items-center">
+              <p class="card-text">
+                Mehmood, Mehwish <br />
+                Student Id: 301137378 <br />
+                Email: mmehmoo5@my.centennialcollege.ca <br />
+                Role: Front-End Developer
+              </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div id="tables" class="card mb-4 box-shadow">
+            <img
+              class="fadeIn aboutPageImgBal"
+              src="../Assets/images/balkaran.jpeg"
+              alt="Front-End Developer"
+            />
+            <div class="card-body">
+              <div class="fadeIn justify-content-center align-items-center">
+              <p class="card-text">
+                Singh, Balkaran <br />
+                Student Id: 301169877 <br />
+                Email: bsing561@my.centennialcollege.ca <br />
+                Role: Front-End Developer
+              </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div id="tables" class="card mb-4 box-shadow">
+            <img
+              class="fadeIn aboutPageImgRis"
+              src="../Assets/images/rishabh.jpeg"
+              alt="Front-End Developer"
+            />
+            <div class="card-body">
+              <div class="fadeIn justify-content-center align-items-center">
+              <p class="card-text">
+                Dogra, Rishabh Dev <br />
+                Student Id: 301255606 <br />
+                Email: rdogra7@my.centennialcollege.ca <br />
+                Role: Front-End Developer
+              </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div id="tables" class="card mb-4 box-shadow">
+            <img
+              class="fadeIn aboutPageImgAla"
+              src="../Assets/images/ala.jpeg"
+              alt="Front-End Developer"
+            />
+            <div class="card-body">
+              <div class="fadeIn justify-content-center align-items-center">
+              <p class="card-text">
+                Al-Khdour, Ala'a <br />
+                Student Id: 301230316 <br />
+                Email: aalkhdou@my.centennialcollege.ca <br />
+                Role: Front-End Developer
+              </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div id="tables" class="card mb-4 box-shadow">
+            <img
+              class="fadeIn aboutPageImgAnkit"
+              src="../Assets/images/ankit.jpeg"
+              alt="Front-End Developer"
+            />
+            <div class="card-body">
+              <div class="fadeIn justify-content-center align-items-center">
+              <p class="card-text">
+                Kodan, Ankit <br />
+                Student Id: 301251952 <br />
+                Email: akodan@my.centennialcollege.ca <br />
+                Role: Front-End Developer
               </p>
               </div>
             </div>
