--- a/Server/Views/content/edituser.ejs
+++ b/Server/Views/content/edituser.ejs
@@ -1,4 +1,4 @@
-  <!--COMP231 Web Application Development - Mantis Developers Team
+ <!--COMP231 Web Application Development - Book a'Smile Team
     --Principal Developers's : 
     ---Name: Ricardo Lopez Tuiran           ---Student ID: 301167302 
     ---Name: Elias Pena Evertz              ---Student ID: 301166037
@@ -6,17 +6,16 @@
     ---Name: Bhupinder Dabb                 ---Student ID: 301187371
     
     --Support Team Members (Secondary Developers, UI/UX Designers)    
-    ---Name: Ankit Kodan                    ---Student ID: 
-    ---Name: Rishabh Dev Dogra              ---Student ID:
-    ---Name: Balkaran Singh                 ---Student ID:
-    ---Name: Mehwish Mehmood                ---Student ID:
-    ---Name: Ala’a Al-khdour                ---Student ID:    
-
+    ---Name: Ankit Kodan                    ---Student ID: 301251952 
+    ---Name: Rishabh Dev Dogra              ---Student ID: 301255606
+    ---Name: Balkaran Singh                 ---Student ID: 301169877
+    ---Name: Mehwish Mehmood                ---Student ID: 301137378
+    ---Name: Ala’a Al-khdour                ---Student ID: 301230316
     --Web App name: Book a'Smile
     --Description: The Dental Appointments Management System is a software application that will allow users to register, 
     --edit and manage their personal accounts, book appointments according to the dentist availability, keep track on appointments 
-    --and have a history of procedures with dates and specific notes.   
-  -->
+    --and have a history of procedures with dates and specific notes. 
+ -->
 
 <%- include('../partials/header.ejs'); %>
 <!-- Register -->
