--- a/Server/Views/content/services.ejs
+++ b/Server/Views/content/services.ejs
@@ -1,4 +1,4 @@
-  <!--COMP231 Web Application Development - Mantis Developers Team
+ <!--COMP231 Web Application Development - Book a'Smile Team
     --Principal Developers's : 
     ---Name: Ricardo Lopez Tuiran           ---Student ID: 301167302 
     ---Name: Elias Pena Evertz              ---Student ID: 301166037
@@ -6,17 +6,16 @@
     ---Name: Bhupinder Dabb                 ---Student ID: 301187371
     
     --Support Team Members (Secondary Developers, UI/UX Designers)    
-    ---Name: Ankit Kodan                    ---Student ID: 
-    ---Name: Rishabh Dev Dogra              ---Student ID:
-    ---Name: Balkaran Singh                 ---Student ID:
-    ---Name: Mehwish Mehmood                ---Student ID:
-    ---Name: Ala’a Al-khdour                ---Student ID:    
-
+    ---Name: Ankit Kodan                    ---Student ID: 301251952 
+    ---Name: Rishabh Dev Dogra              ---Student ID: 301255606
+    ---Name: Balkaran Singh                 ---Student ID: 301169877
+    ---Name: Mehwish Mehmood                ---Student ID: 301137378
+    ---Name: Ala’a Al-khdour                ---Student ID: 301230316
     --Web App name: Book a'Smile
     --Description: The Dental Appointments Management System is a software application that will allow users to register, 
     --edit and manage their personal accounts, book appointments according to the dentist availability, keep track on appointments 
-    --and have a history of procedures with dates and specific notes.   
-  -->
+    --and have a history of procedures with dates and specific notes. 
+ -->
 
   <%- include('../partials/header.ejs'); %>
 
@@ -46,7 +45,7 @@
         <div class="container px-4 px-lg-5">
             
             <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/demo-image-03.jpg" alt="..." /></div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
                         <h4>We proudly provide</h4>
