--- a/Server/Views/partials/header.ejs
+++ b/Server/Views/partials/header.ejs
@@ -57,9 +57,9 @@
         
           <li class="nav-item">
           <% if(page=='dentist') { %>
-            <a class="nav-link active" href="/dentist"><i class="fas fa-book fa-lg"></i> <% if (displayName == "admin admin") { %> Users List <% } else { %> Users List <% } %></a>
+            <a class="nav-link active" href="/dentist"><i class="fas fa-book fa-lg"></i> Users / Dentist List</a>
           <% } else { %> 
-            <a class="nav-link" href="/dentist"><i class="fas fa-book fa-lg"></i>  <% if (displayName == "admin admin") { %> Users List <% } else { %> Users List <% } %></a>
+            <a class="nav-link" href="/dentist"><i class="fas fa-book fa-lg"></i>  Users / Dentist List</a>
           <% } %>
           </li>
 
