--- a/Server/Views/content/services.ejs
+++ b/Server/Views/content/services.ejs
@@ -42,26 +42,29 @@
             <img class="img-fluid" src="../public/Smile.jpg" alt="..." />
         </div>
     </section><section class="projects-section bg-light " id="projects">
-        <div class="container px-4 px-lg-5">
-            
-            <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/demo-image-03.jpg" alt="..." /></div>
-                <div class="col-xl-4 col-lg-5">
-                    <div class="featured-text text-center text-lg-left">
-                        <h4>We proudly provide</h4>
-                        <li class="text-black-50 mb-0">Comprehensive Dentistry</li>
-                        <li class="text-black-50 mb-0">Emergency Care</li>
-                        <li class="text-black-50 mb-0">Surgeries</li>
-                        <li class="text-black-50 mb-0">Sleep Apnea</li>
-                        <li class="text-black-50 mb-0">Grinding</li>
-                        <li class="text-black-50 mb-0">Health Screening/ Oral Screening for cancer</li>
-                        
+        <div class="container px-4 px-lg-5">           
+            <div class="row gx-0 justify-content-center">
+                <div class="col-lg-6"><img class="img-fluid" src="../Assets/images/demo-image-02.jpg" alt="..." /></div>
+                <div class="col-lg-6 order-lg-first">
+                    <div class="bg-black text-center h-100 project">
+                        <div class="d-flex h-100">
+                            <div class="project-text w-100 my-auto text-center text-lg-right">
+                                <h4 class="text-white">We proudly provide</h4>
+                                <li class="mb-0 text-white-50">Comprehensive Dentistry</li>
+                                <li class="mb-0 text-white-50">Emergency Care</li>
+                                <li class="mb-0 text-white-50">Surgeries</li>
+                                <li class="mb-0 text-white-50">Sleep Apnea</li>
+                                <li class="mb-0 text-white-50">Grinding</li>
+                                <li class="mb-0 text-white-50">Health Screening/ Oral Screening for cancer</li>
+                                <hr class="d-none d-lg-block mb-0 me-0" />
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
+                <div class="col-lg-6"><img class="img-fluid" src="../Assets/images/demo-image-01.jpg" alt="..." /></div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
@@ -81,7 +84,7 @@
             </div>
 
             <div class="row gx-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
+                <div class="col-lg-6"><img class="img-fluid" src="../Assets/images/demo-image-02.jpg" alt="..." /></div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
