--- a/Server/Views/dentist/dentists.ejs
+++ b/Server/Views/dentist/dentists.ejs
@@ -47,12 +47,19 @@
                       <th class="text-center">User Type</th>                  
                     <% } else if (typeOfUser =='P') { %> 
                       <th class="text-center">Patient Name</th>                    
-                    <% } else { %> 
+                      <% } else if (typeOfUser =='D') { %> 
                       <th class="text-center">Dentist Name</th>                    
                     <% } %>                     
                     <th class="text-center">Province</th>                  
                     <th class="text-center">Country</th>     
-                    <th class="text-center">Specialty</th>                                 
+                    
+                    <% if (typeOfUser =='A') { %> 
+                      <th class="text-center">Specialty (D) / Special Considerations (P)</th>  
+                    <% } else if (typeOfUser =='P') { %> 
+                      <th class="text-center">Specialty</th>  
+                      <% } else if (typeOfUser =='D') { %> 
+                        <th class="text-center">Specialty</th>          
+                    <% } %>                                                    
                     <%  if(displayName) { %>             
                       <th class="text-center"></th>     
                       <th class="text-center"></th>
