--- a/Server/Views/content/services.ejs
+++ b/Server/Views/content/services.ejs
@@ -111,7 +111,7 @@
                             <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Address</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50"><a href="/contact">Multiple Locations</a></div>
+                            <div class="small text-black-50"><a href="/contact">Contact Us</a></div>
                         </div>
                     </div>
                 </div>
