--- a/Server/Views/content/services.ejs
+++ b/Server/Views/content/services.ejs
@@ -109,9 +109,9 @@
                     <div class="card py-4 h-100">
                         <div class="card-body text-center">
                             <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Address</h4>
+                            <h4 class="text-uppercase m-0">Contact Us</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50"><a href="/contact">Contact Us</a></div>
+                            <div class="small text-black-50"><a href="/contact">Contact Us Form</a></div>
                         </div>
                     </div>
                 </div>
