adjusted dentist list header for guest users

--- a/Server/Views/dentist/dentists.ejs
+++ b/Server/Views/dentist/dentists.ejs
@@ -47,7 +47,7 @@
                       <th class="text-center">User Type</th>                  
                     <% } else if (typeOfUser =='P') { %> 
                       <th class="text-center">Patient Name</th>                    
-                      <% } else if (typeOfUser =='D') { %> 
+                    <% } else { %> 
                       <th class="text-center">Dentist Name</th>                    
                     <% } %>                     
                     <th class="text-center">Province</th>                  
